Simplify caching utilities

--- a/code/notebooks/lotka_volterra/Naive_thinning.ipynb
+++ b/code/notebooks/lotka_volterra/Naive_thinning.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "import lotka_volterra\n",
     "import utils.caching\n",
-    "from utils.caching import cached, cached_batch, subscriptable\n",
+    "from utils.caching import cached\n",
     "from utils.ksd import calculate_ksd\n",
     "from utils.parallel import apply_along_axis_parallel, get_map_parallel\n",
     "from utils.paths import FIGURES_PATH, GENERATED_DATA_PATH\n",
@@ -69,16 +69,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "41ebd969-9f01-4e93-9d2a-a959529e9d49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "figures_path = FIGURES_PATH"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7348cd7d-cb2f-4e22-9d21-f2fccc743fa6",
    "metadata": {},
@@ -88,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3f0aeda0-2356-4b49-bb45-1ce8cf866f8d",
    "metadata": {},
    "outputs": [],
@@ -98,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f5e773bc-3099-477a-b6fb-e535b13e3222",
    "metadata": {},
    "outputs": [],
@@ -117,20 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "474b2853-740d-405b-b04e-0d8d903ecfec",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.12/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 42889 instead\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -138,7 +118,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-60065ae4-6a29-11ef-9145-94de80e86035</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-e6b46110-6e96-11ef-bc92-94de80e86035</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -151,7 +131,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:42889/status\" target=\"_blank\">http://127.0.0.1:42889/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -169,11 +149,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">d7207ad8</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">43355085</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:42889/status\" target=\"_blank\">http://127.0.0.1:42889/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 4\n",
@@ -206,11 +186,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-d33c1059-0cf7-49b2-be3c-11821a9b3937</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-f4720cb3-62ad-4ad8-97c1-4c892ad2721d</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:40495\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:32987\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 4\n",
@@ -218,7 +198,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:42889/status\" target=\"_blank\">http://127.0.0.1:42889/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 16\n",
@@ -252,7 +232,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:39691\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:35603\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -260,7 +240,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:33857/status\" target=\"_blank\">http://127.0.0.1:33857/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:46725/status\" target=\"_blank\">http://127.0.0.1:46725/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -268,13 +248,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:36577\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:34361\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-9koix_i2\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-ees8us3_\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -297,7 +277,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:38791\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:39101\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -305,7 +285,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:42971/status\" target=\"_blank\">http://127.0.0.1:42971/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36967/status\" target=\"_blank\">http://127.0.0.1:36967/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -313,13 +293,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:42987\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:42703\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-9ieqy364\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-ckw8_zga\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -342,7 +322,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:35803\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:35469\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -350,7 +330,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:41889/status\" target=\"_blank\">http://127.0.0.1:41889/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:40079/status\" target=\"_blank\">http://127.0.0.1:40079/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -358,13 +338,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:37155\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:45165\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-3mqr1p2j\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-vcsnzaj1\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -387,7 +367,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:43781\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:40261\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -395,7 +375,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:43107/status\" target=\"_blank\">http://127.0.0.1:43107/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:46543/status\" target=\"_blank\">http://127.0.0.1:46543/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -403,13 +383,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44927\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44187\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-jynb2fkt\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-xbqij630\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -436,10 +416,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:40495' processes=4 threads=16, memory=7.45 GiB>"
+       "<Client: 'tcp://127.0.0.1:32987' processes=4 threads=16, memory=7.45 GiB>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e68f9855-b10a-408c-ba94-740e184b48cb",
    "metadata": {},
    "outputs": [],
@@ -461,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3c7615c8-f90e-4208-9b89-b20e7c21993a",
    "metadata": {},
    "outputs": [],
@@ -479,26 +459,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "38323b17-21e7-44d3-acf6-aeeb5805a1b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached_batch(item_type=np.ndarray, read_only=True)\n",
+    "@cached(item_type=np.ndarray, batch_size=n_chains, read_only=True)\n",
     "def rw_samples() -> list[np.ndarray]:\n",
     "    raise NotImplemented"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a68e1d41-fbb0-4bc5-94a0-ea7a1787838a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached_batch(item_type=np.ndarray, read_only=True)\n",
+    "@cached(item_type=np.ndarray, batch_size=n_chains, read_only=True)\n",
     "def hmc_samples() -> list[np.ndarray]:\n",
     "    raise NotImplemented"
    ]
@@ -521,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "5cc7a40b-b5e3-42fd-8e6f-affae8f10df6",
    "metadata": {},
    "outputs": [],
@@ -532,20 +510,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "df8369b4-0cb6-4d0f-b276-c4a4be3b19bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable\n",
-    "@cached(recalculate=recalculate, persist=True)\n",
+    "@cached()\n",
     "def rw_naive_idx(i: int) -> np.ndarray:\n",
     "    return naive_thin(rw_samples[i].shape[0], n_points_thinned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c59480ed-dcec-4655-8cc0-992c24bc34c9",
    "metadata": {},
    "outputs": [],
@@ -556,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "73f70e7c-a056-44a0-ab87-fb770666f410",
    "metadata": {},
    "outputs": [
@@ -599,7 +576,7 @@
    ],
    "source": [
     "fig = plot_sample_thinned(rw_samples, rw_naive_idx, titles, var_labels);\n",
-    "fig.savefig(figures_path / 'lotka-volterra-naive-thinning.png', dpi=300);\n",
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-naive-thinning.png', dpi=300);\n",
     "fig.suptitle('Results of applying naive thinning to samples from the random-walk Metropolis-Hastings algorithm');"
    ]
   },
@@ -613,17 +590,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "1d19f128-8f5f-4036-83ba-7814f1cd86a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24.869633436203003"
+       "25.87164282798767"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
