--- a/code/notebooks/lotka_volterra/Stein_thinning.ipynb
+++ b/code/notebooks/lotka_volterra/Stein_thinning.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "import lotka_volterra\n",
     "import utils.caching\n",
-    "from utils.caching import cached, cached_batch, subscriptable\n",
+    "from utils.caching import cached\n",
     "from utils.ksd import calculate_ksd\n",
     "from utils.parallel import apply_along_axis_parallel, get_map_parallel\n",
     "from utils.paths import FIGURES_PATH, GENERATED_DATA_PATH\n",
@@ -130,7 +130,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-0e211c34-6a29-11ef-aecc-94de80e86035</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-8b32d34e-6e96-11ef-acac-94de80e86035</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -161,7 +161,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">2d4dfc08</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">847147bd</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -198,11 +198,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-048ecd88-b957-4573-9dfa-b15780ede34f</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-c234296e-cc94-47e2-b31f-400d400c5176</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:39621\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:43717\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 4\n",
@@ -244,7 +244,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:36899\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:37461\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -252,7 +252,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36507/status\" target=\"_blank\">http://127.0.0.1:36507/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:33215/status\" target=\"_blank\">http://127.0.0.1:33215/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -260,13 +260,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:34751\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:35453\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-9madmnx7\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-r01gtm5e\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -289,7 +289,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:40427\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:33415\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -297,7 +297,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:40613/status\" target=\"_blank\">http://127.0.0.1:40613/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:37627/status\" target=\"_blank\">http://127.0.0.1:37627/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -305,13 +305,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:46519\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:39123\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-21ny2g4p\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-bi0ieg_6\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -334,7 +334,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:34561\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:38363\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -342,7 +342,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36327/status\" target=\"_blank\">http://127.0.0.1:36327/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:41955/status\" target=\"_blank\">http://127.0.0.1:41955/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -350,13 +350,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:36619\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44375\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-vhn6qmcm\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-utyxvu7n\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -379,7 +379,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:36051\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:35103\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -387,7 +387,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:40585/status\" target=\"_blank\">http://127.0.0.1:40585/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:33705/status\" target=\"_blank\">http://127.0.0.1:33705/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -395,13 +395,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44853\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:36621\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-lbklkxqi\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-9tynrnw5\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -428,7 +428,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:39621' processes=4 threads=16, memory=7.45 GiB>"
+       "<Client: 'tcp://127.0.0.1:43717' processes=4 threads=16, memory=7.45 GiB>"
       ]
      },
      "execution_count": 8,
@@ -476,8 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached_batch(item_type=np.ndarray, read_only=True)\n",
+    "@cached(item_type=np.ndarray, batch_size=n_chains, read_only=True)\n",
     "def rw_samples() -> list[np.ndarray]:\n",
     "    raise NotImplemented"
    ]
@@ -489,8 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached_batch(item_type=np.ndarray, read_only=True)\n",
+    "@cached(item_type=np.ndarray, batch_size=n_chains, read_only=True)\n",
     "def hmc_samples() -> list[np.ndarray]:\n",
     "    raise NotImplemented"
    ]
@@ -502,8 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached(read_only=True)\n",
+    "@cached(batch_size=n_chains, read_only=True)\n",
     "def rw_grads(i: int) -> np.ndarray:\n",
     "    raise NotImplemented"
    ]
@@ -515,8 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached(read_only=True)\n",
+    "@cached(batch_size=n_chains, read_only=True)\n",
     "def hmc_grads(i: int) -> np.ndarray:\n",
     "    raise NotImplemented"
    ]
@@ -556,8 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached_batch(item_type=np.ndarray, recalculate=recalculate, persist=True)\n",
+    "@cached(item_type=np.ndarray, batch_size=n_chains)\n",
     "def rw_thinned_idx() -> list[np.ndarray]:\n",
     "    # we have to instantiate the array here as the caching function currently cannot be serialised\n",
     "    samples = list(rw_samples)\n",
@@ -585,8 +580,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 5 μs, total: 5 μs\n",
-      "Wall time: 9.54 μs\n"
+      "CPU times: user 4 μs, sys: 1e+03 ns, total: 5 μs\n",
+      "Wall time: 8.34 μs\n"
      ]
     }
    ],
@@ -618,8 +613,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable(n=n_chains)\n",
-    "@cached_batch(item_type=np.ndarray, recalculate=recalculate, persist=True)\n",
+    "@cached(item_type=np.ndarray, batch_size=n_chains)\n",
     "def rw_st_log_idx() -> list[np.ndarray]:\n",
     "    # we have to instantiate the array here as the caching function currently cannot be serialised\n",
     "    samples = list(rw_samples)\n",
@@ -647,7 +641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 μs, sys: 1 μs, total: 4 μs\n",
+      "CPU times: user 3 μs, sys: 1e+03 ns, total: 4 μs\n",
       "Wall time: 7.87 μs\n"
      ]
     }
@@ -740,8 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@subscriptable\n",
-    "@cached(recalculate=recalculate, persist=True)\n",
+    "@cached()\n",
     "def hmc_thinned_idx(i: int) -> np.ndarray:\n",
     "    return thin(np.exp(hmc_samples[i]), hmc_grads[i], n_points_thinned, preconditioner='med')"
    ]
@@ -803,7 +796,7 @@
     {
      "data": {
       "text/plain": [
-       "45.10659337043762"
+       "31.372421503067017"
       ]
      },
      "execution_count": 24,
